# Auto-cars-shop-api

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  postman collection.postman_collection.json  pyproject.toml
backend/: celerybeat-schedule  manage.py
backend/apps/auth/: apps.py  serializers.py  urls.py  views.py
backend/apps/brands/: models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/brands/migrations/: 0001_initial.py  0002_initial.py
backend/apps/cars/: models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/cars/migrations/: 0001_initial.py  0002_initial.py  0003_alter_carad_city_alter_carad_country_and_more.py
backend/apps/currency/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/apps/currency/migrations/: 0001_initial.py  0002_alter_exchangerate_unique_together_and_more.py  0003_exchangerate_updated_at.py
backend/apps/dealers/: models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/dealers/migrations/: 0001_initial.py  0002_initial.py
backend/apps/messaging/: consumers.py  middleware.py  routing.py
backend/apps/premium/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/premium/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/configs/: __init__.py  asgi.py  celery.py  permissions.py  settings.py  urls.py
backend/core/management/commands/: wait_db.py
